force-app/main/default/objects/Tracking_Event__c/Tracking_Event__c.object-meta.xml
<CustomObject>
    <label>Tracking Event</label>
    <nameField>
        <displayFormat>TE-{000000}</displayFormat>
        <label>Tracking Event ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tracking Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>