force-app/main/default/objects/Tracking_Event__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>Sello de tiempo exacto en el que la operadora registró la actualización logística.</description>
    <inlineHelpText>Fecha y hora proporcionada por el transportista sobre el hito alcanzado.</inlineHelpText>
    <label>Event Date</label>
    <type>DateTime</type>
</CustomField>