force-app/main/default/objects/Tracking_Event__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <description>Enlace maestro-detalle inquebrantable que cuelga el evento de su paquete correspondiente.</description>
    <inlineHelpText>Envío logístico al que pertenece este hito específico.</inlineHelpText>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>Tracking Events</relationshipLabel>
    <relationshipName>Tracking_Events</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>