force-app/main/default/objects/Tracking_Event__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>Estado técnico de la mercancía extraído del webhook (ej: &quot;in_transit&quot;, &quot;out_for_delivery&quot;, &quot;delivered&quot;).</description>
    <inlineHelpText>Código del estado actual en el que se encuentra el paquete en tránsito.</inlineHelpText>
    <label>Status Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>